--- a/config/dataset_normals/dataset_val.yaml
+++ b/config/dataset_normals/dataset_val.yaml
@@ -1,7 +1,9 @@
 dataset:
   val:
-  - name: hypersim_normals
-    disp_name: hypersim_normals_val_small_100
-    dir: hypersim
-    filenames: data_split/hypersim_normals/hypersim_filtered_val_100.txt
-    resize_to_hw: null
+  - name: aim2pc_normals
+    disp_name: aim2pc_normals_val
+    dir: .
+    filenames: data_split/aim2pc_normals/val.txt
+    resize_to_hw:
+    - 512
+    - 512
