--- a/config/dataset_normals/dataset_vis.yaml
+++ b/config/dataset_normals/dataset_vis.yaml
@@ -1,7 +1,9 @@
 dataset:
   vis:
-  - name: hypersim_normals
-    disp_name: hypersim_normals_vis
-    dir: hypersim
-    filenames: data_split/hypersim_normals/hypersim_filtered_vis_20.txt
-    resize_to_hw: null
+  - name: aim2pc_normals
+    disp_name: aim2pc_normals_vis
+    dir: .
+    filenames: data_split/aim2pc_normals/vis.txt
+    resize_to_hw:
+    - 512
+    - 512
